--- a/bom/deployment/pom.xml
+++ b/bom/deployment/pom.xml
@@ -736,6 +736,11 @@
                 <artifactId>quarkus-cache-deployment</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
+                <artifactId>quarkuselasticsearch-panache-deployment</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
             <!-- Quarkus test dependencies -->
 
