--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -922,6 +922,11 @@
                 <artifactId>quarkus-cache</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
+                <artifactId>quarkuselasticsearch-panache</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
             <!-- Quarkus test dependencies -->
             <dependency>
