--- a/extensions/panache/elasticsearch-panache/runtime/pom.xml
+++ b/extensions/panache/elasticsearch-panache/runtime/pom.xml
@@ -23,6 +23,17 @@
             <artifactId>quarkus-elasticsearch-rest-client</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.elasticsearch.client</groupId>
+            <artifactId>elasticsearch-rest-high-level-client</artifactId>
+            <version>7.6.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.logging.log4j</groupId>
+                    <artifactId>log4j-api</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-arc</artifactId>
         </dependency>
