--- a/integration-tests/elasticsearch/pom.xml
+++ b/integration-tests/elasticsearch/pom.xml
@@ -54,6 +54,11 @@
       <artifactId>quarkuselasticsearch-panache</artifactId>
       <version>999-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>2.13.0</version>
+    </dependency>
 
     <dependency>
       <groupId>io.quarkus</groupId>
