--- a/integration-tests/elasticsearch/pom.xml
+++ b/integration-tests/elasticsearch/pom.xml
@@ -34,6 +34,11 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
+      <dependency>
+        <groupId>org.hibernate.search</groupId>
+        <artifactId>hibernate-search-backend-elasticsearch</artifactId>
+        <version>6.0.0-SNAPSHOT</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
